# pedoni

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: benchmark.ipynb  plot.ipynb
pedoni/: Cargo.toml
pedoni-simulator/: Cargo.toml
pedoni-simulator/src/: diagnostic.rs  field.rs  lib.rs  neighbor_grid.rs  scenario.rs  util.rs
pedoni-simulator/src/models/: mod.rs  sfm.rs  sfm_gpu.cl  sfm_gpu.rs
pedoni/src/: args.rs  main.rs  renderer.rs  renderer_macroquad.rs
pedoni/src/renderer/: mod.rs  state.rs
scenarios/: bottleneck.toml  bottleneck1.toml  default.toml  default10.toml  evacuation.toml  lanes.toml  narrow-gap.toml  random.toml  random10.toml  s-shape.toml  sparse.toml  straight.toml
src/: args.rs  main.rs
src/renderer/: callback.rs  camera.rs  fill.rs  mod.rs  pedestrian.rs  polygon.rs  shader.wgsl  sprite.rs  texture.rs
src/renderer/shaders/: fill.wgsl  line.wgsl  polygon.wgsl  sprite.wgsl
src/simulator/: diagnostic.rs  environment.rs  field.rs  grid.rs  mod.rs  navigation.rs  optim.rs  scenario.rs  util.rs
src/simulator/kernels/: mod.rs  osm.wgsl
src/simulator/models/: mod.rs  osm.rs  osm_gpu.cl  osm_gpu.rs  osm_gpu.wgsl  sfm.rs  sfm_gpu.rs
