[package]
name = "pedoni"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.29.1", features = ["wgpu"] }
egui-wgpu = "0.29.1"
egui_extras = "0.29.1"
env_logger = "0.11.5"
fastrand = "2.1.0"
fastrand-contrib = "0.1.0"
flume = "0.11.1"
geo = "0.28.0"
geo-rasterize = "0.1.2"
glam = { version = "0.29.1", features = ["serde", "bytemuck"] }
image = { version = "0.25.1", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.22"
ndarray = "0.15.6"
num-traits = "0.2.19"
once_cell = "1.19.0"
ordered-float = "4.2.2"
pittore = { version = "0.1" }
rayon = "1.10.0"
rfd = "0.15.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.128"
thin-vec = "0.2.13"
toml = "0.8.14"

[dev-dependencies]
assert_float_eq = "1.1.3"
