[workspace]
resolver = "2"
members = ["pedoni", "pedoni-*"]

[workspace.metadata]
name = "pedoni"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
pedoni = { path = "./pedoni", version = "0.1.0" }
pedoni-simulator = { path = "./pedoni-simulator", version = "0.1.0" }

[profile.dev]
opt-level = 1
