[package]
name = "pedoni-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
fastrand = "2.1.0"
fastrand-contrib = "0.1.0"
# flume = "0.11.1"
geo = "0.28.0"
geo-rasterize = "0.1.2"
glam = { version = "0.29.1", features = ["serde", "bytemuck"] }
log = "0.4.22"
ndarray = { version = "0.15.6", features = ["rayon"] }
num-traits = "0.2.19"
ocl = "0.19.7"
ordered-float = "4.2.2"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
soa_derive = "0.13.0"
thin-vec = "0.2.13"
toml = "0.8.14"

[dev-dependencies]
assert_float_eq = "1.1.3"
