[package]
name = "pedoni"
version = "0.1.0"
edition = "2021"

[dependencies]
pedoni-simulator = { workspace = true }

anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.4.5"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
pittore = "0.2.3"
serde_json = "1.0.128"
toml = "0.8.14"

[dev-dependencies]
assert_float_eq = "1.1.3"
